# provably-optimal

./: README.md  manim.cfg  pyproject.toml  site.toml
.github/workflows/: ci.yml
decks/ML-optimisation/adagrad-adam/: deck.toml  notes.md  plan.md
decks/ML-optimisation/adagrad-adam/slides/: __init__.py  adagrad.py  adagrad_bound_theorem.py  adagrad_coordinate_response.py  adagrad_diagonal_scaling.py  adagrad_known_ruler.py  adagrad_weighted_ledger.py  beales_plot.py  controls.py  figures.py  gradient_descent_modes.py  intro.py  key_idea.py  local_squeeze.py  momentum_damping.py  momentum_quadratic_cloud.py  momentum_step_geometry.py  optimization_paths.py  plotting.py  quadratic_rotation.py  reminder_example.py  rosenbrock_momentum.py  second_order_approximation.py  style.py
decks/ML-optimisation/adagrad-adam/slides/helpers/: __init__.py  controls.py  figure_helpers.py  optimization_paths.py  plotting.py  reminders.py  second_order.py  style.py
