[project]
name = "provably-optimal"
version = "0.0.0"
description = "Provably Optimal blog built with Simplex."
requires-python = ">=3.13"
dependencies = [
    "contourpy>=1.3.3",
    "manim-simplex>=0.14.0",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.12",
]

[tool.uv]
package = false
